[package]
name = "streak"
version = "0.0.1"
authors = ["Lancelot Carlson <lcarlson@healpay.com>"]
description = "Bindings for the Streak API."
license = "MIT"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_url_params = "0.1"
log = "0.4"

[dev-dependencies]
dotenv = "0.10"
